# MiniSolver-Bench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  asset_ocp_models.py  candidate_specs.py  cases.py  run.py
.github/workflows/: validate.yml
assets/: README.md  catalog.json  summary.json  summary.md
assets/reference/driving/: argoverse_sample_agent.csv  argoverse_sample_agent.json  argoverse_sample_av.csv  argoverse_sample_av.json  mpcc_track.csv  mpcc_track.json  nonlinear_mpcc_fssim.csv  nonlinear_mpcc_fssim.json  nonlinear_mpcc_porto.csv  nonlinear_mpcc_porto.json
assets/reference/robotics/: data_driven_mpc_lemniscate.csv  data_driven_mpc_lemniscate.json  data_driven_mpc_loop.csv  data_driven_mpc_loop.json
backends/acados/: README.md  run.py  run_all.py  run_candidate.py  run_candidates.py
backends/acados/templates/: chain_mass_main.c.in  double_integrator_3d_asset_main.c.in  kinematic_bicycle_asset_main.c.in  pendulum_on_cart_main.c.in  quadrotor_nav_main.c.in  race_cars_main.c.in
backends/altro/: README.md  run_candidate.py  run_candidates.py
backends/altro/src/: double_integrator_3d_benchmark.cpp
backends/casadi/: README.md  run.py  run_all.py  run_candidate.py  run_candidates.py
backends/casadi/src/: double_integrator_3d_benchmark.cpp  kinematic_bicycle_benchmark.cpp
backends/clarabel/: README.md  run_candidate.py  run_candidates.py
case_candidates/: README.md  data_driven_mpc_lemniscate_tracking.json  data_driven_mpc_loop_tracking.json  mpcc_track_following.json  nonlinear_mpcc_fssim_following.json  nonlinear_mpcc_porto_following.json
cases/: chain_mass.json  pendulum_on_cart.json  quadrotor_nav.json  race_cars.json
cpp/include/: asset_benchmark_common.h
docs/: DESIGN.md  PLAN.md  reference_source_survey.md
plots/: README.md  plot_results.py
results/: asset_benchmark_report.md  latest_report.md  summary.csv  summary.json
scenarios/ngsim_i80_v36/: gt.json  ref.csv  scenario.json
scenarios/ngsim_peachtree_v11/: gt.json  ref.csv  scenario.json
scenarios/tum_freiburg1_xyz/: gt.json  ref.csv  scenario.json
scenarios/tum_freiburg2_xyz/: gt.json  ref.csv  scenario.json
scripts/: analyze_reference_assets.py  bootstrap_acados.sh  import_reference_assets.py  summarize_results.py  write_asset_benchmark_report.py  write_report.py
src/: minisolver_runner.cpp
targets/minisolver/: README.md  run.py  run_all.py  run_case_candidate.py  run_case_candidates.py
targets/minisolver/models/: callback_header_patch.py  common.py  generate_official_track_geometry.py
targets/minisolver/models/acados_chain_mass/: generate_model.py
targets/minisolver/models/acados_pendulum/: generate_model.py
targets/minisolver/models/acados_quadrotor_nav/: generate_model.py
targets/minisolver/models/acados_race_cars/: generate_model.py
targets/minisolver/models/double_integrator_3d_asset/: generate_model.py
targets/minisolver/models/kinematic_bicycle_asset/: generate_model.py
targets/minisolver/src/: asset_benchmark.cpp  double_integrator_3d_benchmark.cpp  kinematic_bicycle_benchmark.cpp  official_nmpc_benchmark.cpp
tools/: generate_gt.py  import_ngsim.py  import_tum_rgbd.py  requirements.txt
